beginnings of CardBlock ref #78
NOTE: I did not include migrations in this commit
because I'm not sure I have the models where I want them
so it's only models, HTML template, & CSS

--- a/libraries/libraries/static/scss/main.scss
+++ b/libraries/libraries/static/scss/main.scss
@@ -78,6 +78,7 @@
 @import 'components/misc/rich-text';
 @import 'components/misc/wrapper';
 @import 'components/button';
+@import 'components/card';
 
 // -- Search page and components
 @import 'components/search/search-box';
