--- a/libraries/libraries/static/scss/components/_card.scss
+++ b/libraries/libraries/static/scss/components/_card.scss
@@ -1,21 +1,18 @@
 // modified from Portal's static/styles/portal/sass/partials/components/_cards.scss
 .card {
   border: 1px solid $ccaLightGray;
+  height: 400px;
   margin: 1em auto;
   overflow: hidden;
   position: relative;
-
-    &--carousel{
-        border: none;
-    }
-
-    &--no-border {
-        border: none;
-    }
+  width: 100%;
 
   @include respond($break-medium) {
-    height: 400px;
     width: 50%;
+  }
+
+  &--carousel{
+    border: none;
   }
 
   &--no-border {
@@ -27,7 +24,13 @@
   }
 
   &--sidebar {
-    margin-bottom: 2em;
+    margin: 0 0 2em 0;
+    line-height: 20px;
+    width: 100%;
+
+    @include respond($break-medium) {
+        width: 70%;
+    }
   }
 
   &__title {
@@ -77,17 +80,6 @@
     }
   }
 
-  // libraries don't use tags yet but preserve in case we want to later
-  &__tags {
-    display: flex;
-    flex-flow: row wrap;
-
-    @include respond($break-medium) {
-      position: absolute;
-      bottom: 15px;
-    }
-  }
-
   &__links-list {
     li {
       line-height: 1.75;
@@ -100,8 +92,9 @@
 .card--sidebar .card__title {
   background-color: rgba($blue, .9);
   color: $white;
+  font-size: 18px;
 
   @include respond($break-medium) {
-    font-size: 18px;
+    font-size: 14px;
   }
 }
