--- a/libraries/libraries/static/scss/settings/_colors.scss
+++ b/libraries/libraries/static/scss/settings/_colors.scss
@@ -29,32 +29,30 @@ $turquoise: rgba(23, 191, 179, 1);
 // (prefixed with `cca` not to conflict with Bootstrap colors)
 
 // Primary Colors
-$ccaTeal:  #00BFB3;
-$black: #000000;
-$white: #FFF;
+$ccaTeal:  #00bfb3;
 
 // Secondary Colors
-$ccaCoolGray:  #888B8D;
-$ccaWarmGray: #6E6259;
-$ccaBeige: #DFD1A7;
+$ccaCoolGray:  #888b8d;
+$ccaWarmGray: #6e6259;
+$ccaBeige: #dfd1a7;
 
 // Supporting Accent Colors
-$ccaRed: #CF4520;
+$ccaRed: #cf4520;
 $ccaBlue: #007096;
 $ccaOldBlue: #005776;
 $ccaPurple: #563d82;
-$ccaPink: #F1BDC8;
+$ccaPink: #f1bdc8;
 $ccaGreen: #98bf10;
-$ccaYellow: #FFC845;
-$ccaOrange: #E57200;
+$ccaYellow: #ffc845;
+$ccaOrange: #e57200;
 
 // New Brand Colors
-$ccaNewPink: #FF585D;
+$ccaNewPink: #ff585d;
 $ccaNewGreen: #228848;
 
 // Modified Colors for Portal:
-$ccaLightGray: #A7AAB0;
-$ccaVeryLightGray: #EDEEEE;
-$ccaLightBeige: #FDFAF3;
-$ccaVeryDarkGray: #222222;
-$ccaMedGray:  #CCC;
+$ccaLightGray: #a7aab0;
+$ccaVeryLightGray: #edeeee;
+$ccaLightBeige: #fdfaf3;
+$ccaVeryDarkGray: #222;
+$ccaMedGray:  #ccc;
