exhib - make search description required

--- a/libraries/search/templates/search/search.html
+++ b/libraries/search/templates/search/search.html
@@ -3,6 +3,7 @@
 
 {% block body_class %}search{% endblock %}
 
+{% comment %} @TODO fix empty title for search pages {% endcomment %}
 {% block title %}Search{% endblock %}
 
 {% block content %}
