search - slight pagination fix
the '1' page link at the bottom isn't highlighted at first after
you search because there's no 'page' param in the query string
so I just added a hidden input with page=1 to the search box

--- a/libraries/libraries/templates/components/search/search-box.html
+++ b/libraries/libraries/templates/components/search/search-box.html
@@ -42,6 +42,7 @@
 		/>
 		Pages & people
 	</label>
+	<input type="hidden" name="page" value="1">
 
 	{% if search_results.paginator.count > 0 %}
 		<div class="search-box__number-results">
