--- a/libraries/exhibitions/templates/components/foursquare.html
+++ b/libraries/exhibitions/templates/components/foursquare.html
@@ -7,7 +7,7 @@
         {% endfor %}
     </div>
     <div class="foursquare--frontmatter">
-        <div class="foursquare--frontmatter__title">
+        <div id="title" class="foursquare--frontmatter__title">
             <h1>{{ page.title }}</h1>
         </div>
         {% comment %}
