ol display as numbered list

--- a/libraries/libraries/static/scss/components/misc/_rich-text.scss
+++ b/libraries/libraries/static/scss/components/misc/_rich-text.scss
@@ -12,9 +12,16 @@
         }
     }
 
+    ul {
+        list-style: disc;
+    }
+
+    ol {
+        list-style: decimal;
+    }
+
     ul,
     ol {
-        list-style: inherit;
         margin: 0 0 24px;
         padding-left: 2em;
 
