copy over most alerts code from Portal
NOTE: does not work! I didn't make it work just copied
the source of certain files.

--- a/libraries/libraries/static/scss/main.scss
+++ b/libraries/libraries/static/scss/main.scss
@@ -58,6 +58,9 @@
 @import 'components/header/header';
 @import 'components/header/main-navigation';
 
+// -- Alerts
+@import 'components/alerts/alert-banner';
+
 // -- Home page
 @import 'components/home/home-hero';
 @import 'components/home/home-info-box-times';
