alerts - base app off of cca.edu & not portal
also happens to make things _much_ simpler so that's good
this commit does not include the API/URL configuration needed

--- a/libraries/libraries/templates/components/header/alert_banner.html
+++ b/libraries/libraries/templates/components/header/alert_banner.html
@@ -1,9 +1,19 @@
+{% load alerts_tags %}
 {% show_alert_banner as show_alert_banner %}
-{% show_notification_banner as show_notification_banner %}
 {% if show_alert_banner %}
     {% alert_banner as alert %}
-    {% include "components/alert_banner.html" with type="alert" url=alert.url banner_link_text=alert.alert_banner_link_text text=alert.alert_banner_text %}
-{% elif show_notification_banner %}
-    {% notification_banner as alert %}
-    {% include "components/alert_banner.html" with type="notification" url=alert.url banner_link_text=alert.notification_banner_link_text text=alert.notification_banner_text%}
+    <div class="alert-banner">
+        <div
+            class="alert-banner__alert"
+            role="alert"
+            aria-live="assertive"
+        >
+            <h1 class="sr-only">CCA Alert Banner</h1>
+            <div class="alert-banner__icon"></div>
+            {{alert.alert_text | safe}}
+            {% if alert.show_read_more %}
+                <a href="{{alert.alert_link}}" class="alert-banner__link">{{alert.alert_link_text}}</a>
+            {% endif %}
+        </div>
+    </div>
 {% endif %}
