--- a/libraries/libraries/templates/components/header/header.html
+++ b/libraries/libraries/templates/components/header/header.html
@@ -43,4 +43,6 @@
 			{% include 'components/search/search-box.html' %}
 		</div>
 	</div>
+
+	{% include 'components/header/alert_banner.html' %}
 </header>
