--- a/libraries/libraries/static/scss/components/alerts/_alert_banner.scss
+++ b/libraries/libraries/static/scss/components/alerts/_alert_banner.scss
@@ -1,88 +1,51 @@
-@import './alert-mixins';
-
 .alert-banner {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  padding: $space-ms;
-  margin-bottom: $space-sm;
-
-  &__icon {
-    height: 24px;
-    width: 24px;
-    margin-right: $space-sm;
-    float: left;
-
-    @include icon;
-
-    &--alert {
-      @include alert-icon;
-
-      background-color: $white;
-    }
-
-    &--notification {
-      @include notification-icon;
-
-      background-color: $black;
-    }
-  }
-
-  &__header {
-    text-transform: uppercase;
-  }
-
-  p {
-    margin: 0;
-    margin-right: $space-sm;
-    display: inline;
-    font-size: 18px;
-  }
-
-  a {
-    color: $white;
-    text-decoration: underline;
-    font-size: 18px;
-
-    &:hover {
-      color: $white;
-    }
-  }
-
-  b,
-  strong {
-    @include brown-regular;
-  }
-
-  &--alert {
     background-color: #E00;
-    color: $white;
+    color: #fff;
+    font-size: 18px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    padding: 16px;
+    margin-bottom: 4px;
+
+    font-family: $font--primary;
+    font-weight: 400;
+
+    &__icon {
+        height: 24px;
+        width: 24px;
+        background-color: #fff;
+        margin-right: 8px;
+        float: left;
+
+        mask-repeat: no-repeat;
+        -webkit-mask-repeat: no-repeat;
+        mask-position: center;
+        -webkit-mask-position: center;
+        mask-size: contain;
+        -webkit-mask-size: contain;
+
+        -webkit-mask-image: url("/static/images/exclamation-circle.svg");
+        mask-image: url("/static/images/exclamation-circle.svg");
+    }
+
+    &__header {
+        text-transform: uppercase;
+    }
+
+    p {
+        margin: 0;
+        margin-right: 8px;
+        display: inline;
+    }
 
     a {
-      color: $white;
-
-      &:hover {
-        color: $white;
-      }
+        color: #fff;
+        text-decoration: underline;
+        font-weight: 400;
     }
-  }
 
-  &--notification {
-    background-color: $ccaYellow;
-    color: $black;
-
-    a {
-      color: $black;
-
-      &:hover {
-        color: $black;
-      }
+    b {
+        font-weight: 600;
     }
-  }
-}
-
-.alert-page {
-  &__title {
-    margin-top: 0;
-  }
 }
