update npm deps, fix alerts scss file name

--- a/libraries/libraries/static/scss/components/alerts/_alert-banner.scss
+++ b/libraries/libraries/static/scss/components/alerts/_alert-banner.scss
@@ -8,7 +8,7 @@
     padding: 16px;
     margin-bottom: 4px;
 
-    font-family: $font--primary;
+    font-family: $font-family-sans-serif;
     font-weight: 400;
 
     &__icon {
