fix alert_tags typo

--- a/libraries/libraries/templates/components/header/alert_banner.html
+++ b/libraries/libraries/templates/components/header/alert_banner.html
@@ -1,4 +1,4 @@
-{% load alerts_tags %}
+{% load alert_tags %}
 {% show_alert_banner as show_alert_banner %}
 {% if show_alert_banner %}
     {% alert_banner as alert %}
