aria labels for links in header

--- a/libraries/exhibitions/templates/components/header.html
+++ b/libraries/exhibitions/templates/components/header.html
@@ -2,6 +2,7 @@
 <header class="header js-header">
 	<div class="wrapper wrapper--header">
 		<a
+			aria-label="Home page link"
 			class="header__home-link"
 			href="/"
 			title="CCA Libraries home"
@@ -27,6 +28,7 @@
         </ul>
 
 		<a
+			aria-label="Search button"
 			class="header__nav-link header__nav-link--search js-header-search"
 			href="#search"
 			title="Search"
