--- a/libraries/libraries/templates/components/header/header.html
+++ b/libraries/libraries/templates/components/header/header.html
@@ -2,6 +2,7 @@
 <header class="header js-header">
 	<div class="wrapper wrapper--header">
 		<a
+			aria-label="Home page link"
 			class="header__home-link"
 			href="/"
 			title="Go home"
@@ -28,6 +29,7 @@
 		{% include 'components/header/main-navigation.html' %}
 
 		<a
+			aria-label="Search button"
 			class="header__nav-link header__nav-link--search js-header-search"
 			href="#search"
 			title="Search"
