--- a/libraries/libraries/static/scss/main.scss
+++ b/libraries/libraries/static/scss/main.scss
@@ -13,6 +13,7 @@
 @import 'utilities/bluebg';
 @import 'utilities/clearfix';
 @import 'utilities/respond';
+@import 'utilities/sronly';
 @import 'utilities/text';
 @import 'bootstrap/variables';
 @import 'bootstrap/code'; // depends on vars above
