--- a/libraries/exhibitions/templates/components/header.html
+++ b/libraries/exhibitions/templates/components/header.html
@@ -44,4 +44,6 @@
 			{% include 'components/search/search-box.html' %}
 		</div>
 	</div>
+
+	{% include 'components/header/alert_banner.html' %}
 </header>
