--- a/libraries/libraries/static/scss/settings/_component-specific.scss
+++ b/libraries/libraries/static/scss/settings/_component-specific.scss
@@ -5,3 +5,7 @@
 $header-border-color: black(.1);
 $header-height-small: 60px;
 $header-height-large: 80px;
+
+$alert-max-height: 66px;
+
+$nav-border-bottom: 3px;
