--- a/libraries/libraries/static/scss/components/alerts/_alert-banner.scss
+++ b/libraries/libraries/static/scss/components/alerts/_alert-banner.scss
@@ -1,32 +1,30 @@
 .alert-banner {
-    background-color: #E00;
-    color: #fff;
-    font-size: 18px;
-    display: flex;
-    justify-content: center;
     align-items: center;
-    padding: 16px;
-    margin-bottom: 4px;
-
+    background-color: #E00;
+    color: $white;
+    display: flex;
     font-family: $font-family-sans-serif;
+    font-size: 18px;
     font-weight: 400;
+    justify-content: center;
+    margin-bottom: 4px;
+    max-height: $alert-max-height;
+    padding: 16px;
 
     &__icon {
-        height: 24px;
-        width: 24px;
-        background-color: #fff;
-        margin-right: 8px;
+        background-color: $white;
         float: left;
-
+        height: 24px;
+        margin-right: 8px;
         mask-repeat: no-repeat;
         -webkit-mask-repeat: no-repeat;
         mask-position: center;
         -webkit-mask-position: center;
         mask-size: contain;
         -webkit-mask-size: contain;
-
         -webkit-mask-image: url("/static/images/exclamation-circle.svg");
         mask-image: url("/static/images/exclamation-circle.svg");
+        width: 24px;
     }
 
     &__header {
@@ -34,15 +32,15 @@
     }
 
     p {
-        margin: 0;
-        margin-right: 8px;
         display: inline;
+        margin-right: 8px;
+        margin: 0;
     }
 
     a {
-        color: #fff;
-        text-decoration: underline;
+        color: $white;
         font-weight: 400;
+        text-decoration: underline;
     }
 
     b {
